fix z-index safari

--- a/src/styles/componentes/_Nosotros.scss
+++ b/src/styles/componentes/_Nosotros.scss
@@ -310,6 +310,7 @@ $amarillo: #BF9000;
     padding: 10vh 0 0vh 0;
     background-color: white;
     color: white;
+    -webkit-transform: translate3d(0,0,0);
     @media screen and (max-width: 500px){
         padding: 0 0 10vh 0;
     }
